2012-07-10 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-08-23
	* adding function for print semaphore status using logger

2012-07-08 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-08-22
	* removing reset of lumi and cell type on shmbuffer connection
	  (only relevant for stop and lumi messages)

2012-07-03 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-08-21
	* logging of cell index in pcount assertion

2012-06-29 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-08-20
	* allow discards for RECOWRITTEN raw cell
	* removing pid not fatal if not present


2012-05-31 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-08-19
	* fix for wrong offset of raw cell index buffer
	* we were safe due to part of Process ID buffer never used,
	  until it manifested with a large number of dqm cells

2012-05-22 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-08-18
	* setEvtPrcId is global,indexForEvtPrcId added

2012-05-02 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-08-17
	* merge ForNewRB to trunk

2012-04-22 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-08-16
	* added support for new nExpectedEPs for SM

2012-04-18  Andrei Spataru  <aspataru@cern.ch>

	* tag V00-08-15
	* added check at setEvtDiscard
	
2012-04-12  Andrei Spataru  <aspataru@cern.ch>

	* tag V00-08-14
	* replaced assert with XCEPT_ASSERT

2012-03-18  Andrei Spataru  <aspataru@cern.ch>

	* tag V00-08-13-01
	* fixed function FUShmBuffer::scheduleRawCellForDiscardServerSide

2011-10-21  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-12
	* return error value when sem_wait fails (e.g. with EINTR)

2011-05-20  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-11
	* fixed server side discard methods and asserts
	
2011-05-11  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-10
	* improved handling of EOL (added event type in raw cell,
	added USEDLS event state, cross checks)

2011-04-15  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-08-09
