@@ -1,3 +1,9 @@
+2012-07-12 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V00-08-24
+	* properly unlock shmBuffer before throwing assert, and in removing
+	  client prc id (when it is not found)
+
 2012-07-10 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V00-08-23
